 - pdp3.sh: bug fixes for ANTEX file damage in batch processing
 - pdp3.sh: bug fixes for unexpected break off in multi-day processing
 - pdp3.sh: increased maximum number of days for multi-day processing to 32

15. 2022-10-28 (v2.2.3)
 - pdp3.sh: increased maximum processing interval to 300.0 secs
 - pdp3.sh: fixed syntax errors in output
 - spp: aligned initial coordinates file timestamp with observations
 - lsq: fixed potential fatal issues caused by rounding errors

16. 2022-11-21 (v2.2.4)
 - New default products for dates between 1995 and 2020: IGS Repro3 combination products (IGS2R03FIN) that supprot PPP-AR after 2000
 - pdp3.sh: increased decimal places in time range from two to three
 - table: added igsR3_2135.atx, removed M14.ATX

17. 2023-02-14 (v2.2.5)
 - Added IGS20 compatilibility with new ANTEX file, SINEX file, and "APC_MODEL" keyword
 - pdp3.sh: decreased the minimum processing time range for loose editing to 30.0 secs
 - pdp3.sh: priori station coordinates can now be specified in the sit.xyz manually
 - lib: adopted complete phase center correction on the Melbourn-Wubbena combination
 - lib: fixed the issue of unable to read BDS B1I observations from RINEX 3.02 format
 - lib: fixed the issue of unable to read zero biases from bias product
 - lsq: untrusted coordinates (that previously marked with “*”) are no longer exproted to the kin file
 - table: added igs20_2247.atx

 18. 2023-07-24 (v2.2.6)
 - pdp3.sh: consider specifying the language/region setting to "en_US.UTF-8" to avoid issues with decimal comma
 - pdp3.sh: fixed the issue of unable to download GIM products for 2nd ionospheric corrections after 2022/300
 - lib: fixed the issue of reading multi-day quaternions
 - lib: improved the substitution rules for vacant multi-GNSS PCOs/PCVs and fixed related read issues
 - spp & tedit: fixed the issue of unable to process BDS/GLONASS-only observations
 - table: BDS GEO satellites are disabled by default to enhance processing quality